--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "authors": [
         {
             "name": "杨光",
-            "email": "wx:Q3664839"
+            "email": "3664839@qq.com"
         }
     ],
     "require": {
